# authorizer

./: .dockerignore  .env  .env.sample  .env.test  .envtest  .gitignore  .golangci.yml  ADOPTERS.md  AGENTIC_DELEGATION_DESIGN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_AUTHZ_MODEL.md  FGA_IMPLEMENTATION_AGENTS.md  FGA_OPENFGA_MIGRATION_PLAN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MIGRATION.md  Makefile  NOTICE  README.md  ROADMAP.md  ROADMAP_V2.md  SECURITY.md  TODO.md  couchbase.env  docker-compose.yaml  go.mod  go.sum  gqlgen.yml  index.html  main.go  package-lock.json  package.json
.claude/: settings.local.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
app/: README.md  esbuild.config.js  package-lock.json  package.json
cmd/: fga_engine.go  mcp.go  root.go  seed_client.go  seed_client_test.go
dashboard/: .prettierrc.json  esbuild.config.js  package-lock.json  package.json  tsconfig.json
docs/: enterprise-oidc-idp-integration.md  fga-rebac-guide.md  grpc-rest-api-spec.md  oauth2-oidc-endpoints.md  oauth2-oidc-guide.md  release-runbook.md  storage-optional-null-fields.md
e2e-playground/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  (+1 more)
e2e-playground/sdk-tests/python/: .gitignore  Dockerfile  README.md  conftest.py  helpers.py  pyproject.toml  requirements.txt
e2e-playground/sdk-tests/python/tests/: test_mfa_routing.py  test_otp_lockout.py  test_saml_admin.py  test_scim.py  test_sms_otp.py  test_social_oauth.py  test_totp.py  test_webauthn.py
(+2154 files in other folders)
